--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "smms-cli",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Upload images to sm.ms",
   "main": "lib/smms.js",
-  "repository": "https://github.com/metowolf/smms-cli.git",
-  "author": "metowolf <i@i-meto.com>",
-  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/metowolf/smms-cli.git"
   },
+  "author": "metowolf <i@i-meto.com>",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/metowolf/smms-cli/issues"
   },
   "dependencies": {
+    "meow": "^5.0.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
   },
   "scripts": {
     "test": "cd test && node example.js"
+  },
+  "bin": {
+    "smms": "./lib/cli.js"
   }
 }
