--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smms-cli",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Upload images to sm.ms",
   "main": "lib/smms.js",
   "repository": {
@@ -13,7 +13,9 @@
     "url": "https://github.com/metowolf/smms-cli/issues"
   },
   "dependencies": {
-    "meow": "^5.0.0",
+    "cli-table3": "^0.5.1",
+    "commander": "^2.19.0",
+    "glob": "^7.1.3",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
   },
